# ImageRecognitionWinApp

./: .gitattributes  .gitignore  .lfsconfig  CODEOWNERS  README.md  app.py  camera_image_frame.py  controller.py  crops_frame.py  export_onnx.py  frames.py  image_recognition.py  inference_model_frame.py  main.py  procedureManual.md  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  ruff.toml  setup.py  setup_view.py  test.py  tkinter_sample.py  view_process.py  yolov8_model.py
.github/workflows/: lint.yml
cfg/: yolov10.yml  yolov9.yml
ctk_app/: themeconfig.json  viewprocess.py
function/: cli.py  draw.py  infer.py  letterbox.py  models.py  nozzle.py  processing.py  score.py  utils.py
function/const/: crop.py  model.py
gui/: frames.py  inference_view.py  setup_view.py  view_process.py
gui/frames/: __init__.py  crops_frame.py  inference_model_frame.py  model_selection_frame.py  option_frame.py
inference/: image_recognition.py  infer.py
model/: model.md
models/: README.md
tests/: test_nozzle.py
utils/: arg_utils.py  random_utils.py
utils/constants/: model.py
video/: README.md
video/tests/: README.md
