[project]
name = "ImageRecognitionWinApp"
version = "0.1.0"
description = "A simple application for image recognition."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = []


[project.optional-dependencies]
cpu = [
    "torch==2.3.1",
    "torchvision==0.18.1",
]
gpu = [
    "torch==2.3.1",
    "torchvision==0.18.1",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
